# MDTAIM

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
config/: config_Synth_G_100k_15d_75a.yaml  config_Synth_G_10k_15d_75a.yaml  config_Synth_G_1m_15d_75a.yaml  config_Synth_G_20k_15d_75a.yaml  config_Synth_G_500k_15d_75a.yaml  config_Synth_G_50k_15d_75a.yaml  config_Synth_G_5k_15d_75a.yaml  config_Synth_G_5m_15d_75a.yaml  config_Synth_van_50k_20d_100a.yaml  config_Synth_van_50k_20d_20a.yaml  config_Synth_van_50k_20d_40a.yaml  config_Synth_van_50k_20d_60a.yaml  config_Synth_van_50k_20d_80a.yaml  config_Synth_vd_20k_100d_20a.yaml  config_Synth_vd_20k_10d_20a.yaml  config_Synth_vd_20k_15d_20a.yaml  config_Synth_vd_20k_200d_20a.yaml  config_Synth_vd_20k_20d_20a.yaml  config_Synth_vd_20k_30d_20a.yaml  config_Synth_vd_20k_50d_20a.yaml  config_Thesis_example_1.yaml  config_diff_types_0.yaml  config_diff_types_1.yaml  config_mgab.yaml  config_mscred.yaml  config_pvsystem.yaml  config_tods_synth_uni.yaml  config_toy.yaml
data/output/final/: MSCRED_FINAL.csv  toy_FINAL.csv
data/output/spmf/: CHUI-MinerMax_MSCRED_out.txt  FPClose_toy_out.txt
data/processed/saved_scores/: mps.pkl
data/processed/saved_transactions/: transactions.pkl
data/processed/transaction_databases/: corrected_context.txt  utility_context.txt
data/raw/MSCRED/: MSCRED_GT.csv
data/raw/Synth_VAN_50k_20d_100a/: gt.csv
docs/: spmf_algos.md
mdtaim/: anomalyscore.py  config.py  itemset.py  kdp.py  main.py  pipeline.py  postprocess.py  processdata.py  transactions.py  utility.py
(+15 files in other folders)
